# sinrlib

./: .gitignore  Makefile  README  README.md  backoff.cpp  backoff.h  backoffack.cpp  backoffack.h  config.h  configure.ac  densityknown.cpp  densityknown.h  densityunknown.cpp  densityunknown.h  gadget.cpp  generate_networks.sh  model.cpp  model.h  naive.cpp  naive.h  plot.py  show_model.cpp  simulation.cpp  simulation.h  sinr.cpp  sinrlib.h  social.cpp  social.h  uniform.cpp  uniform.h
src/: Makefile.am  antibackoff.cpp  antibackoff.h  backoff.h  backoffack.cpp  backoffack.h  densityknown.cpp  densityknown.h  densityunknown.cpp  densityunknown.h  gadget.cpp  gadget.h  generate_model.cpp  model.cpp  model.h  show_model.cpp  simulation.cpp  sinr.cpp  social.cpp  social.h  uniform.cpp  uniform.h
